[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Machines/Ghost_Machine_Miner.gd" type="Script" id=1]
[ext_resource path="res://Assets/Art/Machines/machine_miner.png" type="Texture" id=2]
[ext_resource path="res://Assets/Art/UI/ui_arrow.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=2]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14, 15 ]
}

[sub_resource type="GDScript" id=3]
script/source = "extends AnimationPlayer


# Declare member variables here. Examples:
# var a: int = 2
# var b: String = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta: float) -> void:
#	pass
"

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 0.849678, 4 )

[node name="Ghost_Machine_Miner" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false
offset = Vector2( -8, -8 )
hframes = 8
vframes = 2
frame = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 1 )
anims/Running = SubResource( 2 )
script = SubResource( 3 )

[node name="Build_Check_Area" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 1548

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Build_Check_Area"]
build_mode = 1
polygon = PoolVector2Array( 1, 1, 23, 1, 23, 7, 15, 7, 15, 15, 1, 15, 1, 1 )

[node name="ArrowSprite" type="Sprite" parent="."]
position = Vector2( 16, 0 )
texture = ExtResource( 3 )
centered = false

[node name="BeltCheckArea" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 1548

[node name="CollisionShape2D" type="CollisionShape2D" parent="BeltCheckArea"]
position = Vector2( 17, 4 )
shape = SubResource( 4 )

[connection signal="area_entered" from="Build_Check_Area" to="." method="_on_Build_Check_Area_area_entered"]
[connection signal="area_exited" from="Build_Check_Area" to="." method="_on_Build_Check_Area_area_exited"]
[connection signal="body_entered" from="Build_Check_Area" to="." method="_on_Build_Check_Area_body_entered"]
[connection signal="body_exited" from="Build_Check_Area" to="." method="_on_Build_Check_Area_body_exited"]
